--- a/config/netdata.conf
+++ b/config/netdata.conf
@@ -1,3 +1,6 @@
+[plugins]
+    freeipmi = yes
+
 [db]
     # Tier 0, per second data. Set to 0 for no limit.
     dbengine tier 0 retention size = 5GiB
