--- a/config/netdata.conf
+++ b/config/netdata.conf
@@ -7,9 +7,13 @@
     dbengine tier 0 retention time = 1mo
 
     # Tier 1, per minute data. Set to 0 for no limit.
-    dbengine tier 1 retention size = 5GiB
+    dbengine tier 1 retention size = 3GiB
     dbengine tier 1 retention time = 6mo
 
     # Tier 2, per hour data. Set to 0 for no limit.
-    dbengine tier 2 retention size = 5GiB
+    dbengine tier 2 retention size = 3GiB
     dbengine tier 2 retention time = 2y
+
+[plugin:proc:diskspace]
+    exclude space metrics on paths = /proc/ /sys/ /var/run/user/ /run/user/ /snap/ /var/lib/docker/ /data1/dockerData/ /ssdpool/dockerData/
+    exclude space metrics on filesystems = gvfs gluster* s3fs ipfs davfs2 httpfs sshfs gdfs *moosefs fusectl autofs overlayfs
