--- a/config/netdata.conf
+++ b/config/netdata.conf
@@ -15,5 +15,5 @@
     dbengine tier 2 retention time = 2y
 
 [plugin:proc:diskspace]
-    exclude space metrics on paths = /proc/ /sys/ /var/run/user/ /run/user/ /snap/ /var/lib/docker/ /data1/dockerData/ /ssdpool/dockerData/
-    exclude space metrics on filesystems = gvfs gluster* s3fs ipfs davfs2 httpfs sshfs gdfs *moosefs fusectl autofs overlayfs
+    exclude space metrics on paths = /proc/ /sys/ /var/run/user/ /run/user/ /snap/ /var/lib/docker/ /data1/dockerData/* /ssdpool/dockerData/*
+    exclude space metrics on filesystems = gvfs gluster* s3fs ipfs davfs2 httpfs sshfs gdfs *moosefs fusectl autofs overlay
